# data-center-power-risk

./: .gitignore  .replit  00_READ_ME_FIRST.md  01_product_brief.md  02_model_spec.md  03_data_quality_spec.md  04_codex_backend_spec.md  05_replit_ui_spec.md  06_example_payloads.md  07_layered_forecasting_implementation_spec.md  replit.md
backend/: README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/migrations/: env.py
backend/power_risk_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: audit_training_table.py  auto_admit_project_candidates.py  demo_healthcheck.py  discover_starter_dataset.py  discovery_healthcheck.py  doctor_repo_state.py  export_dataset.py  extract_discovered_source_claims.py  generate_project_candidates.py  generate_training_table.py  import_csv_dataset.py  import_dataset.py  ingest_discovered_sources.py  ingest_public_discovered_sources.py  ingest_starter_dataset.py  load_demo_dataset.py  load_demo_evidence.py  promote_project_candidate.py  reset_db.py  run_demo_predictions.py  run_live_discovery_smoke.py  run_project_prediction.py  run_public_discovery.py  seed_demo_data.py  triage_project_candidates.py  validate_source_registry.py  verify_project_candidates.py
backend/tests/: test_automation_claim_suggest.py  test_automation_intake_packet.py  test_candidate_import.py  test_csv_dataset_importer.py  test_demo_healthcheck.py  test_discovered_source_claim_extraction.py  test_evidence_claims_validation.py  test_generic_web_search_discovery.py  test_live_discovery_smoke.py  test_load_demo_dataset.py  (+15 more)
(+158 files in other folders)
